fix: collections(tolist) substituidos por tolist